broke css slideshow with everychanging css touch ups. Fixed slideshow so car does not show until it comes into view. Did this by created a className for the landing page main div and putting an overflow:hidden

--- a/src/styles/components/_base.scss
+++ b/src/styles/components/_base.scss
@@ -25,6 +25,10 @@ body{
   // overflow:hidden;
 }
 
+.landingContain{
+  overflow: hidden;
+}
+
 a{
   color:inherit;
   text-decoration:none;
